[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "distributed_work_queue"
version = "0.0.1"
authors = [
	{ name="Thomas J. Daley", email="tom@powerdaley.com" },
]
description = "Allows processes to queue work that is dequeued and performed by other processes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"redis"
]
classifiers = [
	"Programming Language :: Python :: 3.11",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Natural Language :: English",
]

[project.urls]
"Homepage" = "https://github.com/tjdaley/distributed_work_queue"
"Bug Tracker" = "https://github.com/tjdaleydistributed_work_queue/issues"
